Добавил вывод jsonов

--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,9 @@
     <title>FileSystem</title>
     <link rel="stylesheet" href="static/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="static/script.js"></script>
 </head>
-<body>
-    
+<body id="body">
     <div class="container">
         <h1 class="title">Choose Sorting Order</h1> 
         <input id="asc" type="radio" class="radio" name="sortOrder" checked="checked">
@@ -15,16 +15,11 @@
         <input id="desc" type="radio" class="radio" name="sortOrder" checked="checked">
         <label for="desc" class="label">Descending</label>
         <h1 class="title">Inner Files:</h1>
-        <div>
-            <li class="li">Filename FileSize</li>
-            <li class="li">Filename FileSize</li>
-            <li class="li">Filename FileSize</li>
-            <li class="li">Filename FileSize</li>
-            <li class="li">Filename FileSize</li>
-            <li class="li">Filename FileSize</li>
+        <div id="files">
+        <script src="static/script1.js"></script>
+
         </div>
     </div>
-    
 </body>
 </html>
 
