--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,8 @@
     <title>FileSystem</title>
     <link rel="stylesheet" href="static/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="static/script.js"></script>
 </head>
-<body id="body">
+<body>
     <div class="container">
         <h1 class="title">Choose Sorting Order</h1> 
         <input id="asc" type="radio" class="radio" name="sortOrder" checked="checked">
@@ -16,10 +15,9 @@
         <label for="desc" class="label">Descending</label>
         <h1 class="title">Inner Files:</h1>
         <div id="files">
-        <script src="static/script1.js"></script>
-
         </div>
     </div>
+    <script src="static/script.js"></script>
 </body>
 </html>
 
