Добавил функционал на основную страницу

--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,14 @@
 <body>
     <div class="container">
         <h1 class="title">Choose Sorting Order</h1> 
+        
         <input id="asc" type="radio" class="radio" name="sortOrder" checked="checked">
         <label for="asc" class="label">Ascending</label><br>
-        <input id="desc" type="radio" class="radio" name="sortOrder" checked="checked">
+        <input id="desc" type="radio" class="radio" name="sortOrder">
         <label for="desc" class="label">Descending</label>
-        <h1 class="title">Inner Files:</h1>
+        <h1 class="title">Inner Files: <button id= "back" class="backButton">Back</button></h1>
         <div id="files">
+            
         </div>
     </div>
     <script src="static/script.js"></script>
