--- a/static/index.html
+++ b/static/index.html
@@ -19,7 +19,7 @@
             
         </div>
     </div>
-    <script src="static/script.js"></script>
+    <script src="static/index.js"></script>
 </body>
 </html>
 
