Добавил класс Loader

--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <h2 class="title">Choose Sorting Order</h2> 
-        
         <input id="asc" type="radio" class="radio" name="sortOrder" checked="checked">
         <label for="asc" class="label">Ascending</label><br>
         <input id="desc" type="radio" class="radio" name="sortOrder">
         <label for="desc" class="label">Descending</label>
         <h2 class="title">Inner Files: <button id= "back" class="backButton">Back</button></h2>
+        <img id="load" src="static/load.gif">
         <div id="files">
             
         </div>
